--- a/src/app/pie-chart/pie-chart.component.html
+++ b/src/app/pie-chart/pie-chart.component.html
@@ -1,1 +1,16 @@
-<p>pie-chart works!</p>
+
+<div class="pie-chart-container">
+    <div class="pie-chart">
+        <canvas
+        baseChart
+        class="chart"
+        [data]="pieChartData"
+        [type]="pieChartType"
+        [options]="pieChartOptions"
+        [plugins]="pieChartPlugins"
+      >
+      </canvas>
+    </div>
+
+</div>
+
