Add ngx-chart library

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,23 @@
-<h2>Olympic games app</h2>
-<hr />
+
+
 <p>{{ (olympics$ | async)?.length }} data loaded</p>
-<app-pie-chart></app-pie-chart>
+<header>
+    <h2>Medals per Country</h2>
+    <div class="header-infos">
+        <div class="header-infos__number-of-jos">
+            <h3>Number of JOs</h3>
+            <p>{{ (olympics$ | async)?.length }}</p>
+            
+        </div>
+        <div class="header-infos__number-of-countries">
+            <h3>Number of countries</h3>
+            <p>{{ (olympics$ | async)?.length }}</p>
+            
+        </div>
+    </div>
+</header>
+<app-pie-chart *ngIf="olympics$ | async as olympicsData" [olympicsData]="olympicsData"></app-pie-chart>
+<app-pie-chart-ngx *ngIf="olympics$ | async as olympicsData" [olympicsData]="olympicsData"></app-pie-chart-ngx>
+<!-- <app-pie-chart *ngFor="let olympic of olympics$ | async" [olympics]="olympic"></app-pie-chart> -->
+
+<!-- *ngFor="let faceSnap of faceSnaps$ | async" [faceSnap]="faceSnap" -->
