--- a/src/app/pie-chart/pie-chart.component.scss
+++ b/src/app/pie-chart/pie-chart.component.scss
@@ -1,9 +1,9 @@
 .pie-chart {
-  width: 50%;
+  height: 30%;
 }
 .pie-chart-container {
   width: 100%;
-  height: 100vh;
+  height: 50vh;
   display: flex;
   justify-content: center;
   align-items: center;
