--- a/src/app/pie-chart-ngx/pie-chart-ngx.component.scss
+++ b/src/app/pie-chart-ngx/pie-chart-ngx.component.scss
@@ -1,7 +1,6 @@
 ::ng-deep ngx-tooltip-content.ngx-charts-tooltip-content.type-tooltip {
   .tooltip-caret.position-top {
     border-top-color: #04838f;
-    // top: 100px !important;
   }
 
   background-color: #04838f;
@@ -10,6 +9,15 @@
   font-size: 14px;
   line-height: 30px;
   margin-top: 100px;
-  //   top: 100px !important;
-  //   top: calc(initial - 100px);
+}
+
+.pie-chart__container {
+  display: flex;
+  flex-direction: column;
+  font-size: 60px !important;
+  align-items: center;
+  height: 50vh;
+}
+::ng-deep ngx-charts-pie-label line {
+  transform: translateY(50%) !important;
 }
