--- a/src/app/line-chart-nx/line-chart-nx.component.scss
+++ b/src/app/line-chart-nx/line-chart-nx.component.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   height: 50vh;
-  //   width: 70%;
+  // width: 80% !important;
 }
 ::ng-deep ngx-tooltip-content.ngx-charts-tooltip-content.type-tooltip {
   .tooltip-caret.position-right {
@@ -18,4 +18,9 @@
   font-size: 14px;
   line-height: 30px;
   margin-top: 100px;
+}
+
+::ng-deep .ngx-charts-outer {
+  -webkit-animation: chartFadeIn linear 0 !important;
+  animation: chartFadeIn linear 0 !important;
 }
