--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -18,6 +18,9 @@ header {
 .header-infos {
   display: flex;
   gap: 40px;
+  @media screen and (max-width: 600px) {
+    gap: 10px;
+  }
   h3,
   p {
     padding: 0;
@@ -49,5 +52,10 @@ header {
 
 ::ng-deep .pie-label {
   font-size: 20px !important;
-  margin: 0 5px;
+  margin: 0 5px !important;
+  padding: 0 5px !important;
+  letter-spacing: 1.5px;
+  @media screen and (max-width: 700px) {
+    font-size: 14px !important;
+  }
 }
