--- a/src/app/pie-chart-ngx/pie-chart-ngx.component.html
+++ b/src/app/pie-chart-ngx/pie-chart-ngx.component.html
@@ -4,10 +4,12 @@
 
         <ngx-charts-pie-chart
         [results]="data"
-        [view]="view"
-        [legend]="false"
+       [view]="view"
+        [legend]="showLegend"
+        [legendTitle]="'Countries'"
+        [legendPosition]="legendPosition"
         [explodeSlices]="explodeSlices"
-        [labels]="true"
+        [labels]="showLabel"
         [tooltipText]="customTooltipText"
         (select)="handleClic($event)"
         
