--- a/src/app/pie-chart-ngx/pie-chart-ngx.component.scss
+++ b/src/app/pie-chart-ngx/pie-chart-ngx.component.scss
@@ -8,16 +8,15 @@
   padding: 5px 20px;
   font-size: 14px;
   line-height: 30px;
-  margin-top: 100px;
+  margin-top: 60px;
 }
 
-.pie-chart__container {
+::ng-deep .chart-legend .legend-labels {
   display: flex;
   flex-direction: column;
-  font-size: 60px !important;
   align-items: center;
-  height: 50vh;
 }
-::ng-deep ngx-charts-pie-label line {
-  transform: translateY(50%) !important;
+
+::ng-deep .legend-wrap {
+  width: 100% !important;
 }
